--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+//sda
 <mat-progress-bar *ngIf="_api.isLoading" color="primary" mode="indeterminate"></mat-progress-bar>
 <div class="mat-typography">
   <router-outlet></router-outlet>
