--- a/src/app/modules/huy/huy.component.html
+++ b/src/app/modules/huy/huy.component.html
@@ -1,3 +1,5 @@
-<p>
-  huy works!
-</p>
+<div class="huy">
+  <form [formGroup]="form" (submit)="save()">
+    <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form"></formly-form>
+  </form>
+</div>
